# Exercitium-Python

./: .flake8  .gitignore  .pylintrc  Equivalencia_Haskell_Python.org  README.md  README.org  pyproject.toml
src/: .mypy.ini  Algoritmo_de_bajada.py  Anagramas.py  BEE_El_problema_de_las_fichas.py  BEE_El_problema_del_granjero.py  BEE_Mochila.py  BEE_Reinas.py  BEE_Reinas_Anchura.py  BEE_Reinas_Profundidad.py  BPM_8Puzzle.py  Bandera_tricolor.py  BusquedaEnAnchura.py  BusquedaEnEscalada.py  BusquedaEnProfundidad.py  BusquedaPrimeroElMejor.py  Camino_de_maxima_suma_en_una_matriz.py  Caminos_en_un_triangulo.py  Caminos_en_una_matriz.py  Ceros_finales_del_factorial.py  Clausura_reflexiva.py  Clausura_simetrica.py  Clausura_transitiva.py  Coeficientes_binomiales.py  Composicion_de_relaciones_binarias_v2.py  Conjunto_de_divisores.py  Conjunto_de_primos_relativos.py  Cuadrado_mas_cercano.py  Descomposiciones_triangulares.py  Diagonales_principales.py  Diferencia_simetrica.py  DivideVenceras.py  Duplicacion_de_cada_elemento.py  El_problema_del_calendario_mediante_busqueda_en_espacio_de_estado.py  El_problema_del_domino.py  El_teorema_de_Navidad_de_Fermat.py  Elementos_minimales.py  Escalada_Monedas.py  Escalada_Prim.py  Exponente_en_la_factorizacion.py  Factorizaciones_de_numeros_de_Hilbert.py  (+305 more)
tests/: tes_maximo_de_una_lista.py  test-el_tipo_de_las_listas.py  test.calculo_de_pi_mediante_la_formula_de_Leibniz.py  test:permutacion_ciclica.py  test_Algoritmo_de_bajada.py  test_Aplicacion_de_una_funcion_a_un_arbol.py  test_Arbol_con_las_hojas_en_la_profundidad_dada.py  (+322 more)
(+23 files in other folders)
