[tool.poetry]
name = "Exercitium-Python"
version = "0.1.0"
description = ""
authors = ["Jose A. Alonso <JoseA.Alonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.54.3"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
