[tool.poetry]
name = "Exercitium-Python"
version = "0.1.0"
description = ""
authors = ["Jose A. Alonso <JoseA.Alonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hypothesis = "^6.68.2"
numpy = "^1.24.2"
sympy = "^1.11.1"
mpmath = "^1.2.1"
more-itertools = "^8.10.0"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
